--- a/Casual Friend/.env.example
+++ b/Casual Friend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:De2r1IINZ5s2SAhpU+mmGSAbb1aLBvtXRo9IugSHiuQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
